[package]
name = "authlander-client"
version = "0.2.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.44"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "^1.0"
default-features = false
features = ["derive"]

[dependencies.actix-web-3]
version = "3"
package = "actix-web"
optional = true
default-features = false

[dependencies.actix-web-4]
version = "4"
package = "actix-web"
optional = true
default-features = false

[features]
actix = ["actix3"]
actix3 = ["actix-web-3"]
actix4 = ["actix-web-4"]
